# kerux

./: Cargo.toml
src/: error.rs  main.rs
src/client_api/: auth.rs  ephemeral.rs  keys.rs  mod.rs  pushrules.rs  room.rs  room_events.rs  user.rs
src/events/: mod.rs  pdu.rs  presence.rs  room.rs
src/events/room_version/: mod.rs  v4.rs
src/state/: mod.rs
src/storage/: mem.rs  mod.rs  sled.rs
src/util/: domain.rs  mod.rs  mxid.rs  storage.rs  test.rs
src/validate/: auth.rs
