[package]
name = "kerux"
version = "0.1.0"
authors = ["Rose Hudson <rose@krx.sh>"]
edition = "2018"

[features]
default = ["storage-mem", "storage-sled"]
storage-mem = []
storage-sled = ["sled", "bincode"]
storage-postgres = ["tokio-postgres"]

[dependencies]
actix-cors = "0.6.4"
actix-rt = "2.8.0"
actix-web = "4.3.1"
async-recursion = "1.0.4"
async-trait = "0.1.68"
base64 = "0.21"
chrono = "0.4"
cjson = "0.1.2"
crossbeam = "0.8.2"
displaydoc = "0.2.4"
enum_extract = "0.1.1"
futures = "0.3.28"
itertools = "0.10"
lazy_static = "1.4.0"
percent-encoding = "2"
rand = "0.8.5"
regex = { version = "1.8.3", default-features = false, features = ["perf"] }
ring = "0.16"
rust-argon2 = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.1", features = ["fs", "macros", "sync"] }
toml = "0.7.4"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
uuid = { version = "1.3.3", features = ["v4"] }

sled = { version = "0.34", optional = true }
bincode = { version = "1.3", optional = true }
tokio-postgres = { version = "0.7.8", features = ["with-uuid-0_8", "with-serde_json-1"], optional = true }
fs-err = { version = "2.9.0", features = ["tokio"] }
